# cookiecutter-pycli

./: .gitignore  README.rst  cookiecutter.json  requirements.txt
tests/: test_bake_project.py  test_cookiecutter_template.py
{{cookiecutter.project_slug}}/: README.rst  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/docs/source/: conf.py  index.rst
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __about__.py  __init__.py  __main__.py  cli.py  {{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/commands/: hello.py
{{cookiecutter.project_slug}}/tests/: test_commands.py  test_main.py
