[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{cookiecutter.project_name"
dynamic = ["version"]
description = ''
readme = "README.rst"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/{{ cookiecutter.project_slug }}#readme"
Issues = "https://github.com/unknown/{{ cookiecutter.project_slug }}/issues"
Source = "https://github.com/unknown/{{ cookiecutter.project_slug }}"

[tool.coverage.run]
source_pkgs = ["{{ cookiecutter.project_slug }}", "tests"]
branch = true
parallel = true
omit = [
    "src/{{ cookiecutter.project_slug }}/__about__.py",
]

[tool.coverage.paths]
{{ cookiecutter.project_slug }} = ["src/{{ cookiecutter.project_slug }}", "*/{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}"]
tests = ["tests", "*/{{ cookiecutter.project_slug }}/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ = .__main__.:",
]

[tool.hatch.version]
path = "src/{{ cookiecutter.project_slug }}/__about__.py"

[tool.hatch.envs.default]
python = "{{ cookiecutter.python_version }}"
dependencies = [
    "coverage[toml]>=6.5",
    "pytest",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
    "- coverage combine",
    "coverage report",
]
cov = [
    "test-cov",
    "cov-report",
]
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]